commit nuovo