@@ -6,10 +6,12 @@ import it.unina.foodlab.dao.SessioneDao;
 import it.unina.foodlab.model.Chef;
 import it.unina.foodlab.util.AppSession;
 import javafx.animation.FadeTransition;
+import javafx.animation.PauseTransition;
 import javafx.animation.SequentialTransition;
 import javafx.animation.TranslateTransition;
-import javafx.animation.PauseTransition;
 import javafx.application.Platform;
+import javafx.event.ActionEvent;
+import javafx.event.EventHandler;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.geometry.Rectangle2D;
@@ -23,6 +25,7 @@ import javafx.stage.Screen;
 import javafx.stage.Stage;
 import javafx.util.Duration;
 
+import java.io.IOException;
 import java.net.URL;
 
 public class LoginController {
@@ -40,53 +43,78 @@ public class LoginController {
 
     private Stage stage;
 
+    // DAO come dipendenze del controller (evito new ripetuti)
+    private final ChefDao chefDao = new ChefDao();
+
+    // SVG icons (evito stringhe duplicate)
+    private static final String EYE_OPEN_ICON =
+            "M1 12s4-7 11-7 11 7 11 7-4 7-11 7S1 12 1 12zm11 4a4 4 0 1 0 0-8 4 4 0 0 0 0 8z";
+    private static final String EYE_SLASH_ICON =
+            "M2 5l19 14-1.5 2L.5 7 2 5zm3.3 2.4C7.7 6.2 9.7 5 12 5c7 0 11 7 11 7-.7 1.1-1.7 2.3-3 3.3L18.6 13c.3-.6.4-1.2.4-1.9a5 5 0 0 0-5-5c-.7 0-1.3.1-1.9.4L5.3 7.4z";
+
     /* ====================== LIFECYCLE ====================== */
 
     /** Chiamata dal Main subito dopo il load dell'FXML */
     public void setStage(Stage stage) { this.stage = stage; }
 
     public void requestInitialFocus() {
-        Platform.runLater(() -> {
-            if (usernameField != null) usernameField.requestFocus();
-        });
+        if (usernameField != null) {
+            Platform.runLater(new Runnable() {
+                @Override public void run() { usernameField.requestFocus(); }
+            });
+        }
     }
 
     @FXML
     private void initialize() {
-        // toggle password
-        if (passwordVisibleField != null && passwordField != null) {
-            passwordVisibleField.textProperty().bindBidirectional(passwordField.textProperty());
-            updatePasswordVisibility(false, false);
+        initPasswordToggle();
+        hideError();
 
-            if (toggleVisibilityButton != null) {
-                toggleVisibilityButton.selectedProperty().addListener(
-                        (obs, oldVal, sel) -> updatePasswordVisibility(sel)
-                );
-            }
+        if (loginButton != null) {
+            loginButton.setOnAction(new EventHandler<ActionEvent>() {
+                @Override public void handle(ActionEvent event) { handleLogin(); }
+            });
         }
-
-        // error label off
-        if (errorLabel != null) {
-            errorLabel.setManaged(false);
-            errorLabel.setVisible(false);
+        if (registerButton != null) {
+            registerButton.setOnAction(new EventHandler<ActionEvent>() {
+                @Override public void handle(ActionEvent event) { onRegister(); }
+            });
         }
+        if (usernameField != null && passwordField != null && passwordVisibleField != null) {
+            usernameField.setOnAction(new EventHandler<ActionEvent>() {
+                @Override public void handle(ActionEvent event) {
+                    getActivePasswordField().requestFocus();
+                }
+            });
+            passwordField.setOnAction(new EventHandler<ActionEvent>() {
+                @Override public void handle(ActionEvent event) { handleLogin(); }
+            });
+            passwordVisibleField.setOnAction(new EventHandler<ActionEvent>() {
+                @Override public void handle(ActionEvent event) { handleLogin(); }
+            });
+        }
+    }
 
-        // azioni
-        if (loginButton != null) loginButton.setOnAction(e -> handleLogin());
-        if (registerButton != null) registerButton.setOnAction(e -> onRegister());
+    private void initPasswordToggle() {
+        if (passwordVisibleField == null || passwordField == null) return;
 
-        if (usernameField != null) usernameField.setOnAction(e -> getActivePasswordField().requestFocus());
-        if (passwordField != null) passwordField.setOnAction(e -> handleLogin());
-        if (passwordVisibleField != null) passwordVisibleField.setOnAction(e -> handleLogin());
+        passwordVisibleField.textProperty().bindBidirectional(passwordField.textProperty());
+        updatePasswordVisibility(false, false);
+
+        if (toggleVisibilityButton != null) {
+            toggleVisibilityButton.selectedProperty().addListener((obs, oldVal, sel) -> {
+                updatePasswordVisibility(sel, true);
+            });
+        }
     }
 
     /* ====================== ACTIONS ====================== */
 
     private void handleLogin() {
-        String username = usernameField.getText() == null ? "" : usernameField.getText().trim();
+        String username = safeText(usernameField);
         String password = getActivePasswordField().getText();
 
-        if (username.isEmpty() || password.isEmpty()) {
+        if (username.isEmpty() || password == null || password.trim().isEmpty()) {
             showError("Inserisci username e password.");
             shake(card);
             return;
@@ -96,149 +124,147 @@ public class LoginController {
         String errorMessage = null;
 
         try {
-            ChefDao chefDao = new ChefDao();
-            if (!chefDao.authenticate(username, password)) {
+            boolean ok = chefDao.authenticate(username, password);
+            if (!ok) {
                 errorMessage = "Username o password errati.";
             } else {
                 Chef chef = chefDao.findByUsername(username);
-                if (chef == null || chef.getCF_Chef() == null || chef.getCF_Chef().isBlank()) {
+                if (chef == null || chef.getCF_Chef() == null || chef.getCF_Chef().trim().isEmpty()) {
                     errorMessage = "Chef non trovato dopo l'autenticazione.";
                 } else {
                     // Sessione applicativa
                     String cf = chef.getCF_Chef().trim();
                     AppSession.setCfChef(cf);
 
+                    // Prepara DAOs per la view successiva
                     CorsoDao corsoDao = new CorsoDao(cf);
                     SessioneDao sessioneDao = new SessioneDao(cf);
 
-                    // Carica corsi.fxml dal classpath
-                    URL fxmlUrl = getClass().getResource("/it/unina/foodlab/ui/corsi.fxml");
-                    if (fxmlUrl == null) throw new RuntimeException("FXML mancante: /it/unina/foodlab/ui/corsi.fxml");
-
-                    FXMLLoader ldr = new FXMLLoader(fxmlUrl);
-                    Parent root = ldr.load();
-
-                    CorsiPanelController controller = ldr.getController();
-                    if (controller == null) throw new RuntimeException("Controller nullo in corsi.fxml");
-                    controller.setDaos(corsoDao, sessioneDao);
-
-                    // Nome finestra
-                    String displayName = chef.getNome() != null
-                            ? (chef.getNome() + " " + (chef.getCognome() == null ? "" : chef.getCognome())).trim()
-                            : cf;
-                    if (displayName.isBlank()) displayName = cf;
-
-                    // Mostra scena
-                    Stage st = resolveStage();
-                    if (st == null) throw new RuntimeException("Stage non disponibile");
-
-                    Scene scene = new Scene(root, 1000, 640);
-                    
-                    st.setTitle("UninaFoodLab - Corsi di " + displayName);
-                    st.setScene(scene);
-                    st.show();
-                    enforceFullScreenLook(st);
-
-                    return; // SUCCESS: esco senza mostrare errore
+                    // Carica e mostra la view dei corsi
+                    showCorsiScene(chef, corsoDao, sessioneDao);
+                    return; // success
                 }
             }
         } catch (Exception ex) {
+            // Log minimale in console, messaggio pulito in UI
             ex.printStackTrace();
-            errorMessage = "Errore durante il login: " + ex.getMessage();
+            errorMessage = "Errore durante il login. Riprova.";
         } finally {
             setBusy(false);
         }
 
-        // Se arrivo qui, c'è stato un errore
         if (errorMessage != null) {
             showError(errorMessage);
             shake(card);
         }
     }
 
-   @FXML
-private void onRegister() {
-    try {
-        // Carica la view di registrazione dal classpath
-        FXMLLoader loader = new FXMLLoader(getClass().getResource("/it/unina/foodlab/ui/RegisterChefDialog.fxml"));
-        StackPane registerRoot = loader.load();
-        RegisterChefController regCtrl = loader.getController();
+    @FXML
+    private void onRegister() {
+        try {
+            FXMLLoader loader = new FXMLLoader(getResource("/it/unina/foodlab/ui/RegisterChefDialog.fxml"));
+            StackPane registerRoot = loader.load();
+            final RegisterChefController regCtrl = loader.getController();
 
-        Stage st = resolveStage();
-        if (st == null) {
-            showError("Stage non disponibile.");
-            return;
-        }
+            final Stage st = resolveStage();
+            if (st == null) {
+                showError("Stage non disponibile.");
+                return;
+            }
 
-        // Cambia root OR crea la scena se assente, senza usare variabili catturate nelle lambda
-        Scene current = st.getScene();
-        if (current == null) {
-            st.setScene(new Scene(registerRoot, 720, 520));
-        } else {
-            current.setRoot(registerRoot);
-        }
+            Scene current = st.getScene();
+            if (current == null) {
+                st.setScene(new Scene(registerRoot, 720, 520));
+            } else {
+                current.setRoot(registerRoot);
+            }
 
-        // --- Bottone "Registrati" ---
-        Button registerBtn = (Button) registerRoot.lookup("#registerButton");
-        if (registerBtn != null) {
-            registerBtn.setOnAction(event -> {
-                Chef chef = regCtrl.getChef();
-                if (chef == null) return; // errore già mostrato dal controller
-
-                try {
-                    new ChefDao().register(chef);
-
-                    // Ricarica il Login e reimposta lo Stage sul NUOVO controller (niente cattura di 'scene')
-                    FXMLLoader loginLdr = new FXMLLoader(getClass().getResource("/it/unina/foodlab/ui/LoginFrame.fxml"));
-                    StackPane loginRoot = loginLdr.load();
-                    LoginController newLogin = loginLdr.getController();
-                    newLogin.setStage(st);
-                    newLogin.requestInitialFocus();
-
-                    Scene sc = st.getScene();            // rileggo la scena al momento del click
-                    if (sc == null) {
-                        st.setScene(new Scene(loginRoot, 720, 520));
-                    } else {
-                        sc.setRoot(loginRoot);
+            Button registerBtn = (Button) registerRoot.lookup("#registerButton");
+            if (registerBtn != null) {
+                registerBtn.setOnAction(new EventHandler<ActionEvent>() {
+                    @Override public void handle(ActionEvent event) {
+                        Chef chef = regCtrl.getChef();
+                        if (chef == null) return; // errori già mostrati nella form
+                        try {
+                            new ChefDao().register(chef);
+                            // Torna al login
+                            loadLoginScene(st);
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            regCtrl.showError("Errore durante la registrazione. Controlla i dati e riprova.");
+                        }
                     }
+                });
+            }
 
-                } catch (Exception ex) {
-                    ex.printStackTrace();
-                    regCtrl.showError("Errore durante la registrazione: " + ex.getMessage());
-                }
-            });
-        }
-
-        // --- Bottone "Annulla" ---
-        Button cancelBtn = (Button) registerRoot.lookup("#cancelButton");
-        if (cancelBtn != null) {
-            cancelBtn.setOnAction(event -> {
-                try {
-                    FXMLLoader loginLdr = new FXMLLoader(getClass().getResource("/it/unina/foodlab/ui/LoginFrame.fxml"));
-                    StackPane loginRoot = loginLdr.load();
-                    LoginController newLogin = loginLdr.getController();
-                    newLogin.setStage(st);
-                    newLogin.requestInitialFocus();
-
-                    Scene sc = st.getScene();            // rileggo la scena qui, niente cattura
-                    if (sc == null) {
-                        st.setScene(new Scene(loginRoot, 720, 520));
-                    } else {
-                        sc.setRoot(loginRoot);
+            Button cancelBtn = (Button) registerRoot.lookup("#cancelButton");
+            if (cancelBtn != null) {
+                cancelBtn.setOnAction(new EventHandler<ActionEvent>() {
+                    @Override public void handle(ActionEvent event) {
+                        try {
+                            loadLoginScene(st);
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            showError("Errore caricando la schermata di login.");
+                        }
                     }
-                } catch (Exception ex) {
-                    ex.printStackTrace();
-                    showError("Errore caricando LoginFrame.fxml: " + ex.getMessage());
-                }
-            });
-        }
+                });
+            }
 
-    } catch (Exception ex) {
-        ex.printStackTrace();
-        showError("Errore apertura registrazione: " + ex.getMessage());
+        } catch (IOException ex) {
+            ex.printStackTrace();
+            showError("Impossibile aprire la registrazione.");
+        }
     }
-}
 
+    /* ====================== NAV HELPERS ====================== */
+
+    private void showCorsiScene(Chef chef, CorsoDao corsoDao, SessioneDao sessioneDao) throws IOException {
+        URL fxmlUrl = getResource("/it/unina/foodlab/ui/corsi.fxml");
+        if (fxmlUrl == null) throw new IOException("FXML mancante: /it/unina/foodlab/ui/corsi.fxml");
+
+        FXMLLoader ldr = new FXMLLoader(fxmlUrl);
+        Parent root = ldr.load();
+
+        CorsiPanelController controller = ldr.getController();
+        if (controller == null) throw new IOException("Controller nullo in corsi.fxml");
+        controller.setDaos(corsoDao, sessioneDao);
+
+        String displayName = buildDisplayName(chef);
+        Stage st = resolveStage();
+        if (st == null) throw new IOException("Stage non disponibile");
+
+        Scene scene = new Scene(root, 1000, 640);
+        st.setTitle("UninaFoodLab - Corsi di " + displayName);
+        st.setScene(scene);
+        st.show();
+        enforceFullScreenLook(st);
+    }
+
+    private void loadLoginScene(Stage st) throws IOException {
+        FXMLLoader loginLdr = new FXMLLoader(getResource("/it/unina/foodlab/ui/LoginFrame.fxml"));
+        StackPane loginRoot = loginLdr.load();
+        LoginController newLogin = loginLdr.getController();
+        newLogin.setStage(st);
+        newLogin.requestInitialFocus();
+
+        Scene sc = st.getScene();
+        if (sc == null) {
+            st.setScene(new Scene(loginRoot, 720, 520));
+        } else {
+            sc.setRoot(loginRoot);
+        }
+    }
+
+    private String buildDisplayName(Chef c) {
+        if (c == null) return "";
+        String nome = c.getNome() == null ? "" : c.getNome().trim();
+        String cognome = c.getCognome() == null ? "" : c.getCognome().trim();
+        String full = (nome + " " + cognome).trim();
+        if (!full.isEmpty()) return full;
+        String cf = c.getCF_Chef();
+        return cf == null ? "" : cf.trim();
+    }
 
     /* ====================== UI HELPERS ====================== */
 
@@ -251,11 +277,11 @@ private void onRegister() {
     }
 
     private TextField getActivePasswordField() {
-        return (passwordVisibleField != null && passwordVisibleField.isVisible())
-                ? passwordVisibleField : passwordField;
+        if (passwordVisibleField != null && passwordVisibleField.isVisible()) {
+            return passwordVisibleField;
+        }
+        return passwordField;
     }
-
-    private void updatePasswordVisibility(boolean show) { updatePasswordVisibility(show, true); }
 
     private void updatePasswordVisibility(boolean show, boolean focus) {
         if (passwordField == null || passwordVisibleField == null) return;
@@ -267,12 +293,10 @@ private void onRegister() {
 
         if (show) {
             if (focus) { passwordVisibleField.requestFocus(); passwordVisibleField.end(); }
-            if (eyeIcon != null)
-                eyeIcon.setContent("M1 12s4-7 11-7 11 7 11 7-4 7-11 7S1 12 1 12zm11 4a4 4 0 1 0 0-8 4 4 0 0 0 0 8z");
+            if (eyeIcon != null) eyeIcon.setContent(EYE_OPEN_ICON);
         } else {
             if (focus) { passwordField.requestFocus(); passwordField.end(); }
-            if (eyeIcon != null)
-                eyeIcon.setContent("M2 5l19 14-1.5 2L.5 7 2 5zm3.3 2.4C7.7 6.2 9.7 5 12 5c7 0 11 7 11 7-.7 1.1-1.7 2.3-3 3.3L18.6 13c.3-.6.4-1.2.4-1.9a5 5 0 0 0-5-5c-.7 0-1.3.1-1.9.4L5.3 7.4z");
+            if (eyeIcon != null) eyeIcon.setContent(EYE_SLASH_ICON);
         }
     }
 
@@ -298,6 +322,12 @@ private void onRegister() {
         fadeIn.play();
     }
 
+    private void hideError() {
+        if (errorLabel == null) return;
+        errorLabel.setManaged(false);
+        errorLabel.setVisible(false);
+    }
+
     private void shake(VBox target) {
         if (target == null) return;
         TranslateTransition t1 = new TranslateTransition(Duration.millis(60), target); t1.setFromX(0);  t1.setToX(-8);
@@ -308,29 +338,41 @@ private void onRegister() {
     }
 
     private void enforceFullScreenLook(Stage st) {
-        Platform.runLater(() -> {
-            try {
-                Screen screen = Screen.getScreensForRectangle(
-                        st.getX(), st.getY(), st.getWidth(), st.getHeight()
-                ).stream().findFirst().orElse(Screen.getPrimary());
-                Rectangle2D vb = screen.getVisualBounds();
+        Platform.runLater(new Runnable() {
+            @Override public void run() {
+                try {
+                    Screen screen = Screen.getScreensForRectangle(
+                            st.getX(), st.getY(), st.getWidth(), st.getHeight()
+                    ).stream().findFirst().orElse(Screen.getPrimary());
+                    Rectangle2D vb = screen.getVisualBounds();
 
-                st.setX(vb.getMinX());
-                st.setY(vb.getMinY());
-                st.setWidth(vb.getWidth());
-                st.setHeight(vb.getHeight());
+                    st.setX(vb.getMinX());
+                    st.setY(vb.getMinY());
+                    st.setWidth(vb.getWidth());
+                    st.setHeight(vb.getHeight());
 
-                st.toFront();
-                st.requestFocus();
+                    st.toFront();
+                    st.requestFocus();
 
-                st.setAlwaysOnTop(true);
-                PauseTransition pt = new PauseTransition(Duration.millis(120));
-                pt.setOnFinished(ev -> st.setAlwaysOnTop(false));
-                pt.play();
-
-            } catch (Exception ex) {
-                ex.printStackTrace();
+                    st.setAlwaysOnTop(true);
+                    PauseTransition pt = new PauseTransition(Duration.millis(120));
+                    pt.setOnFinished(ev -> st.setAlwaysOnTop(false));
+                    pt.play();
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
             }
         });
+    }
+
+    /* ====================== UTILS ====================== */
+
+    private static String safeText(TextField tf) {
+        if (tf == null || tf.getText() == null) return "";
+        return tf.getText().trim();
+    }
+
+    private static URL getResource(String path) {
+        return LoginController.class.getResource(path);
     }
 }
